[gd_scene load_steps=4 format=3 uid="uid://dorjaeeve6s2m"]

[ext_resource type="Script" path="res://scripts/game/missile.gd" id="1_k7738"]
[ext_resource type="PackedScene" uid="uid://bdbjl5sbfl0ec" path="res://prefabs/art/enemy/enemy_missile_a.tscn" id="1_ptk2n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a51d4"]
radius = 26.0
height = 118.0

[node name="FatMissile" type="CharacterBody2D"]
script = ExtResource("1_k7738")

[node name="Enemy_Missile_A" parent="." instance=ExtResource("1_ptk2n")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_a51d4")
debug_color = Color(0.764706, 0, 0.282353, 0.419608)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-25, -60, 50, 120)

[node name="SnapshotTimer" type="Timer" parent="."]
one_shot = true

[node name="LivingTimer" type="Timer" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="SnapshotTimer" to="." method="_on_snapshot_timer_timeout"]
[connection signal="timeout" from="LivingTimer" to="." method="_on_living_timer_timeout"]
